# gst.cdt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  IMPORTANT.md  README.md  build.sh  install.sh  pipeline.jsonc  uninstall.sh
.buildkite/: pipeline.yml
.cicd/: pipeline.yml  submodule-regression-checker.sh
.cicd/helpers/: docker-hash.sh
.cicd/metrics/: test-metrics.js
docker/: install_deb.sh
docs/guides/: cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md
docs/tools/: gstio-abidiff.md  gstio-abigen.md  gstio-cpp.md  gstio-init.md  gstio-ld.md
docs/upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
examples/hello/: CMakeLists.txt  README.txt
examples/multi_index_example/: CMakeLists.txt  README.txt
examples/send_inline/: CMakeLists.txt  README.txt
examples/send_inline/include/: send_inline.hpp
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
gstio_llvm/: .gitignore  .gitmodules
gstio_llvm/cmake/: config-ix.cmake  config.guess
gstio_llvm/docs/: CodeOfConduct.rst
libraries/: CMakeLists.txt
libraries/boost/include/boost/config/detail/: select_platform_config.hpp
libraries/gstiolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  gstio.hpp  gstiolib.cpp  ignore.hpp  malloc.cpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  simple_malloc.cpp  singleton.hpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  transaction.hpp  types.h  varint.hpp
libraries/gstiolib/capi/gstio/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/gstiolib/contracts/gstio/: action.hpp  contract.hpp  dispatcher.hpp  gstio.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  system.hpp  transaction.hpp
libraries/gstiolib/core/gstio/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  powers.hpp  print.hpp  rope.hpp  serialize.hpp  symbol.hpp  time.hpp  varint.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: Availability.h  AvailabilityInternal.h  iostream  new
libraries/libc++/libcxx/src/: gstio.cpp  locale.cpp
libraries/libc++/libcxx/src/include/: loader.h
libraries/libc++/libcxx/test/std/experimental/string.view/string.view.find/: find_first_not_of_pointer_size_size.pass.cpp  find_first_of_pointer_size_size.pass.cpp  find_last_not_of_pointer_size_size.pass.cpp  find_last_of_pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.first.not.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.first.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.last.not.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.last.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/string.view/string.view.find/: find_first_not_of_pointer_size_size.pass.cpp  find_first_of_pointer_size_size.pass.cpp  find_last_not_of_pointer_size_size.pass.cpp  find_last_of_pointer_size_size.pass.cpp
libraries/libc/musl/include/bits/: alltypes.h  stddef.h
libraries/libc/musl/src/stdio/: printf.c
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/gstio/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
modules/: ClangExternalProject.txt  GstioCDTMacros.cmake.in  GstioLibConfig.cmake.in  GstioWasmToolchain.cmake.in  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  gstio.cdt-config.cmake
scripts/: generate_bottle.sh  generate_tarball.sh  gstio_build_amazon.sh  gstio_build_centos.sh  gstio_build_darwin.sh  gstio_build_fedora.sh  gstio_build_ubuntu.sh
scripts/ricardgst/: README.md  ricardgst.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  (+6 more)
tools/: CMakeLists.txt
(+136 files in other folders)
